--- a/popup2.css
+++ b/popup2.css
@@ -9,6 +9,7 @@
         height: 370px;
         display: block;
         margin: auto auto;
+        margin-top: 30px;
 
 }
 
@@ -17,7 +18,7 @@
 	width: 70px;
 	height: 70px;
     display: block;
-    margin: -50px auto;
+    margin:10px 120px;
 }
 
 #search
@@ -38,7 +39,8 @@ body {
         background-repeat:   no-repeat;
         overflow:hidden;
         margin-top: 25px;
-        min-width:600px;}
+        min-width:600px;
+    }
 
 
 
@@ -66,9 +68,9 @@ body {
 
 .red
 {
-    background-color: #E74C3C;
-    border-bottom: 5px solid #BD3E31;
-    text-shadow: 0px -2px #BD3E31;
+        background-color: #E74C3C;
+        border-bottom: 5px solid #BD3E31;
+        text-shadow: 0px -2px #BD3E31;
 }
 
 .green
