--- a/openNotes.css
+++ b/openNotes.css
@@ -1,8 +1,37 @@
+@import url('http://fonts.googleapis.com/css?family=Acme');
+
+
 #1
 {
     display: block;
     margin: auto auto;
     margin-top: 50px;
+}
+
+#back
+{
+    display: block;
+    margin:auto;
+    position: relative;
+    padding: 8px 20px;
+    font-family: 'Acme', sans-serif;
+    font-size: 15px;
+    background-color: transparent;
+    background-repeat:no-repeat;
+    text-decoration: none;  
+    cursor: pointer; 
+    cursor: hand;
+    color: #fff;
+    border-color: #fff;
+    border-width: 3px;
+}
+
+#backDiv
+{
+	margin:0;
+	padding:0;
+  	height:60px
+	
 }
 
 textarea
@@ -11,16 +40,17 @@ textarea
 	height: 200px;
 	border-style: solid;
 	border-width: 5px;
-	margin: auto auto;
-	border-color: #fff;
-	margin-top: 5px;
-	margin-left: 15px;
+	border-color: #F2CF66;
+	margin-top: 25px;
+	margin-left: 65px;
+    font-size: 13px;
+	margin-bottom:5px;
 	background-color: #FFFFCC;
+    cursor: hand;
 }
+
 body
 {
-	background:  url("background1.jpg");
-    background-size: cover; 
-    width: 450px;
-	
+background-color: #000114;
+         width: 600px;
 }
