--- a/update.css
+++ b/update.css
@@ -20,11 +20,6 @@
     border-width: 2px;
     outline:0;  
 }
-#upButtons>*:focus,#upButtons>*:hover
-{
-    outline:0;
-         -webkit-transform: scale(1.2);
-}
 
 #transcript
 {
@@ -113,7 +108,6 @@
     margin-right: 10px;
 }
 
-
 body {
         background-color: #000114;
         overflow:hidden;
@@ -150,11 +144,11 @@ body {
 }
 
 #start:focus {outline:0;font-size: 17px;}
-
 #listening:focus {outline:0;font-size: 17px;}
 
 .action-button:focus, .action-button:hover {outline:0;-webkit-transform: scale(1.2); }
 
+.upButtons:focus,.upButtons.hover{outline:0;-webkit-transform: scale(1.2); }
 
 #start: focus
 {
